docs(SAFE-T1307): add FastMCP vulnerability (GHSA-c2jp-c369-7pvx)
Add critical MCP-native confused deputy vulnerability documentation:

- FastMCP OAuth integration vulnerability disclosed Oct 28, 2025
- Confused-deputy account takeover when fronting Entra ID without DCR
- Leveraged consent for static client to deliver auth code to attacker redirect
- Patched in FastMCP v2.13.0
- No public claims of in-the-wild exploitation at disclosure

This is the first documented confused deputy vulnerability in an actual
MCP server implementation, making this technique no longer theoretical
for the MCP ecosystem.

Updated sections:
- First Observed: Now documents actual MCP ecosystem observation
- Current Status: Added FastMCP implementation note
- Real-World Context: Added MCP-native example as first case
- References: Added GitHub Advisory GHSA-c2jp-c369-7pvx
- Detection Rule: Added FastMCP to incident coverage mapping
- Version History: Updated to reflect MCP-native case inclusion

Sources:
- GitHub Advisory GHSA-c2jp-c369-7pvx (Oct 28, 2025)
- https://github.com/advisories/GHSA-c2jp-c369-7pvx

Signed-off-by: arjunastha <arjun@astha.ai>

--- a/techniques/SAFE-T1307/detection-rule.yml
+++ b/techniques/SAFE-T1307/detection-rule.yml
@@ -9,8 +9,8 @@ description: |
   
   The confused deputy pattern (Hardy, 1988) occurs when a trusted intermediary is tricked
   into misusing its authority. This rule detects both classic patterns and modern variations
-  documented in real-world incidents (AWS AppSync 2022, GitHub→AWS OIDC 2023-2025, GCP
-  ConfusedFunction 2024, OAuth IdP Mix-Up research 2016).
+  documented in real-world incidents (FastMCP GHSA-c2jp-c369-7pvx 2025, AWS AppSync 2022,
+  GitHub→AWS OIDC 2023-2025, GCP ConfusedFunction 2024, OAuth IdP Mix-Up research 2016).
   
   Detection Coverage:
   
@@ -45,6 +45,7 @@ description: |
 references:
   - https://github.com/safe-mcp/techniques/SAFE-T1307
   - https://modelcontextprotocol.io/specification/draft/basic/security_best_practices
+  - https://github.com/advisories/GHSA-c2jp-c369-7pvx
   - https://dl.acm.org/doi/10.1145/54289.871709
   - https://datatracker.ietf.org/doc/html/rfc7519
   - https://datatracker.ietf.org/doc/html/draft-ietf-oauth-security-topics
@@ -445,6 +446,11 @@ notes: |
      - Integrate with identity providers for real-time token revocation
   
   DETECTION COVERAGE BY REAL-WORLD INCIDENT:
+  
+  FastMCP Confused Deputy (GHSA-c2jp-c369-7pvx, 2025):
+    Detected by: selection_consent_bypass, selection_idp_mixup
+    Indicators: Consent cookie reuse, authorization code delivered to attacker redirect URI
+    Status: Patched in FastMCP v2.13.0
   
   AWS AppSync Cross-Tenant (2022):
     Detected by: selection_iam_assumption, selection_tenant_violation
